[gd_scene load_steps=18 format=3 uid="uid://buj48d65j7y07"]

[ext_resource type="Script" path="res://Scripts/ingame_ui_manager.gd" id="1_3cf0e"]
[ext_resource type="PackedScene" uid="uid://cq8y4l8uapojy" path="res://Scenes/DialoguePlayer.tscn" id="2_ehn1p"]
[ext_resource type="PackedScene" uid="uid://b84obdsc4r2vk" path="res://Scenes/fps_counter.tscn" id="3_y1d86"]
[ext_resource type="PackedScene" uid="uid://dy41ui65qkhmb" path="res://Scenes/Map_Marker_Editor.tscn" id="4_w862u"]
[ext_resource type="PackedScene" uid="uid://ccmqbt58qk8rv" path="res://Scenes/simulation_notification.tscn" id="5_g51f2"]
[ext_resource type="PackedScene" uid="uid://dslxdgbana1k1" path="res://InventorySystem/inventory.tscn" id="6_u1p46"]
[ext_resource type="PackedScene" uid="uid://bh861bc6qssti" path="res://Scenes/CaptainUI.tscn" id="7_51gob"]
[ext_resource type="FontFile" uid="uid://by0ihctjvtjh2" path="res://Fonts/Caudex-Regular.ttf" id="8_cokoq"]
[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="9_8iafl"]
[ext_resource type="FontFile" uid="uid://d3evvotf2wqa3" path="res://Fonts/Play-Bold.ttf" id="10_ljnge"]
[ext_resource type="Shader" path="res://Shaders/Crt.gdshader" id="11_1oyku"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0a4hg"]
blend_mode = 1
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26ms5"]
bg_color = Color(0.104229, 0.190224, 0.196376, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5r8g"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.615304, 0.57196, 0.322451, 1)
border_blend = true
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
corner_detail = 1
shadow_size = 5
shadow_offset = Vector2(-2, 2)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_qsdd3"]
noise_type = 4
frequency = 1.0
fractal_octaves = 10
fractal_weighted_strength = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uyww5"]
seamless = true
normalize = false
noise = SubResource("FastNoiseLite_qsdd3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ndluk"]
shader = ExtResource("11_1oyku")
shader_parameter/curvature = 0.28
shader_parameter/skip = 0.01
shader_parameter/image_flicker = 0.05
shader_parameter/vignette_flicker_speed = 0.01
shader_parameter/vignette_strength = 1.2
shader_parameter/small_scanlines_speed = 1.0
shader_parameter/small_scanlines_proximity = 2.0
shader_parameter/small_scanlines_opacity = 1.17
shader_parameter/scanlines_opacity = 0.08
shader_parameter/scanlines_speed = 1.0
shader_parameter/scanline_thickness = 0.55
shader_parameter/scanlines_spacing = 1.85
shader_parameter/noise_texture = SubResource("NoiseTexture2D_uyww5")

[node name="InScreenUI" type="CanvasLayer" node_paths=PackedStringArray("_Inventory", "_CaptainUI", "_MapMarkerEditor", "PauseContainer")]
process_mode = 3
script = ExtResource("1_3cf0e")
_Inventory = NodePath("Control3/UnderStatUI/Inventory")
_CaptainUI = NodePath("Control3/UnderStatUI/CaptainUI")
_MapMarkerEditor = NodePath("Control3/MapMarkerEditor")
PauseContainer = NodePath("Control3/PauseContainer")
DiagplScene = ExtResource("2_ehn1p")

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DarkBlueBackground" type="Panel" parent="Control3"]
material = SubResource("CanvasItemMaterial_0a4hg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_26ms5")

[node name="FpsCounter" parent="Control3" instance=ExtResource("3_y1d86")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
grow_horizontal = 2

[node name="MapMarkerEditor" parent="Control3" instance=ExtResource("4_w862u")]
layout_mode = 1

[node name="SimulationNotification" parent="Control3" instance=ExtResource("5_g51f2")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 54.0
offset_bottom = 141.0
grow_vertical = 1
theme_override_font_sizes/font_size = 24

[node name="UnderStatUI" type="Control" parent="Control3"]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Inventory" parent="Control3/UnderStatUI" instance=ExtResource("6_u1p46")]
visible = false
layout_mode = 1

[node name="CaptainUI" parent="Control3/UnderStatUI" instance=ExtResource("7_51gob")]
visible = false
layout_mode = 1

[node name="PauseContainer" type="PanelContainer" parent="Control3"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -191.0
offset_right = 193.5
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_s5r8g")

[node name="HBoxContainer" type="VBoxContainer" parent="Control3/PauseContainer"]
layout_mode = 2
alignment = 1

[node name="PauseLabel" type="Label" parent="Control3/PauseContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.615304, 0.57196, 0.322451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_cokoq")
theme_override_font_sizes/font_size = 96
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="Control3/PauseContainer/HBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("9_8iafl")
theme_override_fonts/font = ExtResource("10_ljnge")
theme_override_font_sizes/font_size = 34
text = "Return
"

[node name="Save" type="Button" parent="Control3/PauseContainer/HBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("9_8iafl")
theme_override_fonts/font = ExtResource("10_ljnge")
theme_override_font_sizes/font_size = 34
text = "Save"

[node name="Exit" type="Button" parent="Control3/PauseContainer/HBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("9_8iafl")
theme_override_fonts/font = ExtResource("10_ljnge")
theme_override_font_sizes/font_size = 34
text = "Exit"

[node name="PanelContainer" type="PanelContainer" parent="Control3"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -100.0
offset_right = 143.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_8iafl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control3/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control3/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("10_ljnge")
theme_override_font_sizes/font_size = 41
text = "Game Lost"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control3/PanelContainer/VBoxContainer" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("9_8iafl")
theme_override_font_sizes/font_size = 26
text = "OK"

[node name="Screen" type="ColorRect" parent="Control3"]
process_mode = 3
material = SubResource("ShaderMaterial_ndluk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(50, 50)
mouse_filter = 2

[connection signal="pressed" from="Control3/PauseContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Control3/PauseContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control3/PanelContainer/VBoxContainer/Button" to="." method="On_Game_Lost_Button_Pressed"]
